chore: fix alignment issue

--- a/src/features/components/organisms/markets/market-banner/styles.module.scss
+++ b/src/features/components/organisms/markets/market-banner/styles.module.scss
@@ -1,21 +1,24 @@
 @use 'features/styles/theme/theme-mixins' as *;
 
 .item_box {
-    @include breakpoints(laptop) {
+    @include breakpoints(tablet) {
         max-inline-size: 53rem;
-        height: 53rem;
+    }
+    @include breakpoints(laptop) {
+        block-size: 53rem;
     }
 }
 .text_description {
     text-align: center;
     @include breakpoints(tablet) {
         min-inline-size: 45.4rem;
-        text-align: left;
+        text-align: start;
     }
 }
-@include breakpoints(tablet) {
-    .flex_container {
+.flex_container {
+    @include breakpoints(tablet) {
         position: relative;
+        min-block-size: 36rem;
         isolation: isolate;
     }
 }
@@ -23,9 +26,9 @@
 .image_container {
     @include breakpoints(tablet) {
         position: absolute;
-        right: 0;
+        inset-inline-end: 0;
         z-index: -1;
-        padding-top: 6rem;
+        padding-block-start: 6rem;
         margin-block-start: 0;
     }
 }
