--- a/src/features/pages/markets/etf/instrumental-content.tsx/styles.module.scss
+++ b/src/features/pages/markets/etf/instrumental-content.tsx/styles.module.scss
@@ -3,12 +3,14 @@
 
 .item_container {
     @include breakpoints(tablet) {
-        padding: 0 22rem;
+        max-inline-size: 80rem;
+        margin-inline: auto;
     }
 }
+
 .content_wrapper {
     border: 1px solid $color-grey-6;
-    border-top: none;
+    border-block-start: none;
     .link_text {
         text-decoration: underline;
         cursor: pointer;
