--- a/src/features/pages/markets/etf/instruments/styles.module.scss
+++ b/src/features/pages/markets/etf/instruments/styles.module.scss
@@ -2,6 +2,7 @@
 
 .item_container {
     @include breakpoints(tablet) {
-        padding: 0 22rem;
+        max-inline-size: 80rem;
+        margin-inline: auto;
     }
 }
